TrojanServ Module for NeoStats Changelog.
==============================================================================
0.9.3 - Fish - 07 June, 2003
 - Found a few bugs with nickflood detection thanks to the logs from -=OrPhEuS=-
 - added ident and host to akill message in #services chan.
 - Forgot to put in /help set akilltime
 - Kicks are now handled (Fixes that Hu, user isn't a part of xxx messages)
 - Notices are now processed by the bots

0.9.2 - Fish - 03 June, 2003
 - Fixed the hash_insert problem that was crashing NeoStats. Was happening with NickChanges
 - Fixed a type on the set verbose on message. 
 - Fixed DoOnJoin Setting. 
 - Added new option to not join Private Channels
 - fixed a bug with trying to signoff virtual bots after they had already been signed off!
 - Fixed a bug with IRCd's that use Tokens, and Version's not getting checked. Reported by Tank. 

0.9.1 - Fish - 25 May, 2003
 - Onjoin bot wasn't checking the last Onjoin Definition. Fixed. 
 - Fixed a problem with Matched channels in new_chan code. Re-Arranged Join_Chan code instead.
 - Fixed a problem with "Definitions count" after a update
 - AutoUpgrade now works
 - Messages recieved by the onjoinbot are now dumped into the logfile
 - Fixed a problem with restoring some string settings
 - Updated a bit the Channel Flood Checking. Now also checks the TS of the server to determine if its a flood.
 - NickFlood Checking is now Enabled
 - Changed the order of gotpositive to svsjoin/akill/warn/nothing