@@ -6,6 +6,7 @@ TrojanServ Module for NeoStats Changelog.
  - Forgot to put in /help set akilltime
  - Kicks are now handled (Fixes that Hu, user isn't a part of xxx messages)
  - Notices are now processed by the bots
+ - Check Exempts for PM's and Notices is now performed.
 
 0.9.2 - Fish - 03 June, 2003
  - Fixed the hash_insert problem that was crashing NeoStats. Was happening with NickChanges
